--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Vitaly Vivchar
-description: Android Developer from Tomsk
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+name: Сыны отечества
+description: Победа любит подготовку!
+avatar: 
 
 footer-links:
   dribbble:
